# Practica_Sistemas_Distribuidos

./: README.md
fileManager/: CMakeCache.txt  CMakeLists.txt  MainServer.cpp  Makefile  cmake_install.cmake  fileManager_imp.h  fileManager_stub.h  filemanager.cpp  filemanager.h  filemanagerimp.h  filemanagerstub.h  main_fm.cpp  operacionesFiles.h  server.cpp  utils.cpp  utils.h
fileManager/dirprueba/: hola.txt
multMatrix/: CMakeLists.txt  Ejemplo0.code-workspace  Makefile  main_multMatrix.cpp  main_serverMatrix.cpp  matrix_imp.h  matrix_stub.h  multMatrix  multmatrix.cpp  multmatrix.h  operaciones.h  resultado.txt  resultado2.txt  serverObjetos.cpp  utils.cpp
